[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"