[package]
name = "sender_client_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = "0.4.13"
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }
iota-keys = { git = "https://github.com/iotaledger/iota", package = "iota-keys" }
shared_crypto = { git = "https://github.com/iotaledger/iota", package = "shared-crypto" }

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
fastcrypto = "0.1.8"
bcs = "0.1.4"
clap = "3.0.0-beta.2"
